--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^7.14.9",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "*",
     "datauri": "^3.0.0",
@@ -30,11 +30,14 @@
     "winston-cloudwatch": "*"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.2",
     "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^13.1.8",
     "@types/node-fetch": "^2.5.5",
+    "@types/pg": "^7.14.9",
     "@types/winston": "^2.4.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
